--- a/src/Components/Navigation/NavbarStyles.css
+++ b/src/Components/Navigation/NavbarStyles.css
@@ -78,6 +78,7 @@
         background: white;
         box-shadow: 0 40px 60px rgba(0, 0, 0, .1);
         padding: 40px 0 0 10px;
+        transition: 0.3s ease-in-out;
     }
 
     #navbar-items.active{
