--- a/src/Components/Map-page/MapStyles.css
+++ b/src/Components/Map-page/MapStyles.css
@@ -12,3 +12,26 @@
     height: 500px;
     border-style: solid;
 }
+
+.buildings {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 180px;
+    border-style: solid;
+}
+
+.buildings.coecsa-building{
+    left: 900px;
+    top: 250px;
+    width: 100px; 
+    height: 120px;
+}
+
+.buildings.annex-building{
+    left: 1050px;
+    top: 250px;
+    width: 100px; 
+    height: 120px;
+}
