--- a/src/Components/Map-page/MapStyles.css
+++ b/src/Components/Map-page/MapStyles.css
@@ -35,3 +35,19 @@
     width: 100px; 
     height: 120px;
 }
+
+@media  screen and (max-width:769px){
+
+    .campus-map{
+        width: 100%;
+        height: 500px;
+    }
+
+    .buildings.coecsa-building{
+        left: 3px;
+        top: 250px;
+        width: 100px; 
+        height: 120px;
+    }
+
+}
