--- a/src/Components/Card/CardStyles.css
+++ b/src/Components/Card/CardStyles.css
@@ -1,19 +1,45 @@
 .card-container{
-    border: 1px solid black;
-    box-shadow: 0 0 5px black;
-    width: 250px;
-    margin: 20px;
+    box-shadow: 0px 0px 15px -5px;
+    width: 300px;
+    overflow: hidden;
+    transition: 0.3s ease-in-out;
+}
+
+.card-container:hover{
+    transform: scale(1.1);
+}
+
+.card-title{
+    font-weight: 700;
+}
+
+.card-body{
+    text-align: start;
+    margin: 1rem;
+}
+
+.card-body h3{
+    color: #272b36;
+}
+
+.card-description{
+    color: #93969d;
+    font-size: 1rem;
 }
 
 .card-image img{
-    width: 250px;
+    overflow: hidden;
+    height: 200px;
+    width: 100%;
 }
 
 .card-footer{
     display: flex;
     justify-content: space-between;
+    font-size: small;
+    font-weight: 700;
     align-items: center;
-
+    padding-bottom: 1rem;
 }
 
 .card-footer img{
