--- a/src/Components/Card/CardStyles.css
+++ b/src/Components/Card/CardStyles.css
@@ -20,17 +20,19 @@
 
 .card-body h3{
     color: #272b36;
+    margin: 0;
+    padding: 0;
 }
 
 .card-description{
     color: #93969d;
-    font-size: 1rem;
 }
 
 .card-image img{
     overflow: hidden;
     height: 200px;
     width: 100%;
+
 }
 
 .card-footer{
@@ -39,9 +41,10 @@
     font-size: small;
     font-weight: 700;
     align-items: center;
+    width: 80%;
     padding-bottom: 1rem;
 }
 
 .card-footer img{
-    width: 35px;
+    width: 25px;
 }
