--- a/src/Components/Card-component/CardStyles.css
+++ b/src/Components/Card-component/CardStyles.css
@@ -1,6 +1,7 @@
 .card-container{
     box-shadow: 0px 0px 15px -5px;
     width: 300px;
+    height: 450px;
     overflow: hidden;
     transition: 0.3s ease-in-out;
     border-radius: 5px;
