--- a/src/Components/Buildings-component/BuildingCardStyles.css
+++ b/src/Components/Buildings-component/BuildingCardStyles.css
@@ -1,19 +1,25 @@
 .building-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-    box-shadow: 0px 0px 15px -5px;
-    width: 530px;
-    height: 400px;
-    overflow: hidden;
-    transition: 0.3s ease-in-out;
+    box-shadow: 0px 20px 50px rgba(122, 134, 153, 0.12);
+    padding: 30px 30px 200px 30px;
     border-radius: 10px;
+    position: relative;
+    height: 460px;
+    width: 528px;
+    background-color: white;
+    border-style: solid;
+    border-width: thin;
+    border-color: #bdc6d1;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    overflow: hidden;
 }
 
 .building-img{
-    margin-top: 6.3rem;
-    height: 300px;
-    width: 300px;
+    position: absolute;
+    bottom: -6px;
+    right: 0;
+    z-index: 2;
+    height: 70%;
+    width: 60%;
     overflow: hidden;
 }
 
@@ -23,15 +29,27 @@
 }
 
 .building-description{
-    margin: 2rem 2rem;
+    position: absolute;
     text-align: start;
-    width: 50%;
-}
-
-.building-description h1{
-    color: #272b36;
+    width: 90%;
+    font-size: 18px;
+    line-height: 28px;
 }
 
 .building-description h3{
+    font-size: 36px;
+    padding-bottom: 0.5rem;
+    color: #272b36;
+}
+
+.building-description h4{
     color: #93969d;
+}
+
+.building-description p{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
