--- a/src/Components/Buildings-component/Buildings.css
+++ b/src/Components/Buildings-component/Buildings.css
@@ -1,7 +1,11 @@
+.buildings-wrap h1{
+    text-align: start;
+    padding: 2rem 400px;
+}
+
 .buildings-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem 400px 2rem;
+    padding: 0rem 400px 2rem;
 }
-
