--- a/src/Components/Card-component/CardStyles.css
+++ b/src/Components/Card-component/CardStyles.css
@@ -1,5 +1,8 @@
 .card-container{
-    box-shadow: 0px 0px 15px -5px;
+    border-style: solid;
+    border-width: thin;
+    border-color: #bdc6d1;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
     width: 330px;
     height: 500px;
     overflow: hidden;
