--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
 }
 
 .App{
   font-family: 'Roboto';
-  text-align: center;
 }
