--- a/src/Components/Navigation-component/NavbarStyles.css
+++ b/src/Components/Navigation-component/NavbarStyles.css
@@ -12,7 +12,7 @@
     border-width: thin;
     border-color: #bdc6d1;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
-  }
+}
   
 .navbar-container {
     display: flex;
@@ -20,7 +20,7 @@
     align-items: center;
     height: 80px;
     max-width: 1100px;
-  }
+}
   
 .navbar-logo {
     color: #8c0001;
@@ -32,20 +32,20 @@
     font-weight: 700;
     display: flex;
     align-items: center;
-  }
+}
   
-  .nav-menu {
+.nav-menu {
     display: grid;
     grid-template-columns: repeat(4, auto);
     list-style: none;
     text-align: center;
     width: 60vw;
     justify-content: end;
-    margin-right: rem;
-  }
+    margin-right: 0.5rem;
+}
   
   
-  .nav-links {
+.nav-links {
     color: #272b36;
     font-weight: 700;
     display: flex;
@@ -53,22 +53,22 @@
     text-decoration: none;
     padding: 0.5rem 1rem;
     height: 100%;
-  }
+}
   
-  .nav-links:hover {
+.nav-links:hover {
     border-bottom: 4px solid #8c0001;
     transition: all 0.2s ease-out;
-  }
+}
   
   .nav-links-mobile {
     display: none;
-  }
+}
   
-  .menu-icon {
+.menu-icon {
     display: none;
-  }
+}
   
-  @media screen and (max-width: 960px) {
+@media screen and (max-width: 960px) {
     .NavbarItems {
       position: relative;
     }
@@ -86,7 +86,7 @@
     }
   
     .nav-menu.active {
-      background: #242222;
+      background: white;
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
@@ -149,4 +149,4 @@
       color: #242424;
       transition: 250ms;
     }
-  }
+}
