--- a/src/Components/Navigation-component/NavbarStyles.css
+++ b/src/Components/Navigation-component/NavbarStyles.css
@@ -28,8 +28,8 @@
     margin-left: 10px;
     cursor: pointer;
     text-decoration: none;
-    font-size: 2rem;
-    font-weight: 700;
+    font-family: 'Changa One', sans-serif;
+    font-size: 2rem;;
     display: flex;
     align-items: center;
 }
