--- a/src/Components/Navigation-component/NavbarStyles.css
+++ b/src/Components/Navigation-component/NavbarStyles.css
@@ -29,7 +29,7 @@
     cursor: pointer;
     text-decoration: none;
     font-family: 'Changa One', sans-serif;
-    font-size: 2rem;;
+    font-size: 2rem;
     display: flex;
     align-items: center;
 }
