--- a/src/Components/Navigation-component/NavbarStyles.css
+++ b/src/Components/Navigation-component/NavbarStyles.css
@@ -19,7 +19,7 @@
     justify-content: center;
     align-items: center;
     height: 80px;
-    max-width: 1100px;
+    max-width: 1300px;
 }
   
 .navbar-logo {
@@ -30,6 +30,7 @@
     text-decoration: none;
     font-family: 'Changa One', sans-serif;
     font-size: 2rem;
+    font-weight: 500;
     display: flex;
     align-items: center;
 }
