--- a/src/Components/Events-component/EventCardStyles.css
+++ b/src/Components/Events-component/EventCardStyles.css
@@ -1,5 +1,5 @@
 .event-container{
-    width: 300px;
+    width: 348px;
     height: auto;
     background-color: white;
     border-style: solid;
@@ -8,6 +8,9 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
     overflow: hidden;
     padding-bottom: 1rem;
+    margin: 100px 50%;
+    border-radius: 5px;
+    
 }
 
 .event-content{
@@ -15,7 +18,18 @@
 }
 
 .event-content h3{
-    padding-top: 0.5rem;
+    font-size: 28px;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+}
+
+.event-content p{
+    font-weight: 500;
+
+}
+
+.event-img{
+    height: 250px;
 }
 
 .event-img img{
@@ -25,19 +39,28 @@
 }
 
 .event-info{
+    padding-top: 2rem;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding-top: 0.5rem;
-    align-items: flex-start;
+}
+
+.event-info h4{
+    
+    margin-right: auto;
+    margin-left: 5px;
+}
+
+.event-info time{
+    font-weight: bold;
+    
 }
 
 .logo{
-    border-style: solid;
-    width: 25px;
+    width: 30px;
+    height: 30px;
 }
 
-.event-info img{
+.logo img{
     width: 100%;
     height: 100%;
     object-fit: cover;
