--- a/src/Components/Events-component/EventCardStyles.css
+++ b/src/Components/Events-component/EventCardStyles.css
@@ -8,9 +8,7 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
     overflow: hidden;
     padding-bottom: 1rem;
-    margin: 100px 50%;
     border-radius: 5px;
-    
 }
 
 .event-content{
@@ -64,4 +62,14 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.bell-icon{
+    position: absolute;
+    margin-top: 20px;
+    margin-left: 288px;
+    color: rgb(255, 255, 255);
+    width: 50px;
+    font-weight: bolder;
+
 }
