--- a/src/Components/Hero-component/HeroStyles.css
+++ b/src/Components/Hero-component/HeroStyles.css
@@ -15,7 +15,7 @@
 
 .hero-bg{
     max-width: 2000px;
-    background-color: rgb(76, 76, 76);
+    background-color: #8c0000ed;
 }
 
 .hero-wrap img{
