Added developer component

--- a/src/Components/About-component/DeveloperStyles.css
+++ b/src/Components/About-component/DeveloperStyles.css
@@ -1,8 +1,13 @@
-.about-lycee-wrap{
-    background-color: #dde0e4;
+
+.developer.wrap{
+    margin: auto;
 }
 
-.content{
+.developer-container{
+  
+}
+
+.developer-content{
     max-width: 1300px;
     display: flex;
     align-items: center;
@@ -11,48 +16,44 @@
     padding: 2rem;
 }
 
-.about-lycee-right img{
-    width: 100%;
-    border-radius: 50px;
+.developer-left img{
+    width: 400px;
+}   
+
+.developer-right{
+    margin-left: 20%;
 }
 
-.about-lycee-right{
-    padding: 2rem;
-}
-
-.about-lycee-left p{
+.developer-content p{
     padding-top: 1rem;
-    color: black;
-    width: 60%;
+    
     font-size: 18px;
 }
 
-.about-lycee-left h1{
-    color: #8c0001;
-    font-size: 80px;
+.developer-content h1{
+    font-size: 60px;
 }
 
 @media screen and (max-width: 960px) {
-    .about-lycee-wrap{
+    .developer.wrap{
         overflow: hidden;
     }
 
-    .content{
+    .developer-content{
         display: inline-block;
         text-align: center;
     }
-    
-    .about-lycee-left p{
-        padding-top: 1rem;
-        margin: auto;
+
+    .developer-right{
         width: 70%;
+        margin: auto;
     }
 
     .about-lycee-container img{
         max-width: 70%;
     }
 
-    .about-lycee-container h1{
+    .developer-right h1{
         padding-top: 2rem;
         font-size: 50px;
     }
