--- a/src/Components/Campus-component/Buildings/coecsa-building/CoecsaStyles.css
+++ b/src/Components/Campus-component/Buildings/coecsa-building/CoecsaStyles.css
@@ -1,22 +1,16 @@
 
-
-
 .coecsa-container{
     border-style: solid;
-    touch-action: none;
+    border-width: thin;
+    border-color: #bdc6d1;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    border-style: solid;
     max-width: 1300px;
-    height: 300px;
-    overflow: hidden;
-    touch-action: none;
+    margin: auto;
 }
 
-
 .coecsa-container img{
-    width: 200;
-    height: 100%;
-    position: relative;
-    touch-action: none;
-    object-fit: contain;
-    max-width: none;
-    max-height: none;
+    object-fit: cover;
+    width: 100%;
+    height: auto;
 }
